Add copyright and confidentiality notice to style.css
Added copyright notice and confidentiality statement.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*
+ * Copyright (c) 2026 Gabriel Horakhty / SoftIndie.
+ * Todos os direitos reservados.
+ * * Este código é confidencial e proprietário.
+ * A cópia não autorizada deste arquivo, via qualquer meio, é estritamente proibida.
+ */
+
 :root {
     --bg-color: #F9E4B7;
     --stroke-color: #2D241E;
